<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical">

    <ScrollView android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:textColor="#000000"
                    android:maxLines="5"
                    android:singleLine="false"
                    android:textSize="20sp"
                    android:lines="8"
                    android:ellipsize="marquee"
                    android:layout_marginBottom="8dp"
                    android:textStyle=""
                    android:scrollbars="vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/intro"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <RadioGroup
                            android:id="@+id/userTypeRad"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="8dp"
                            >

                            <RadioButton
                                android:id="@+id/radioInfected"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="20sp"
                                android:text="@string/infected"
                                android:textColor="#fff"
                                android:textStyle="bold"
                                android:paddingVertical="5dp"
                                android:textAlignment="center"
                                android:background="#864cd5"
                                android:checked="false" />

                            <RadioButton
                                android:id="@+id/radioHighRisk"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="20sp"
                                android:layout_marginTop="3dp"
                                android:text="@string/risk_group"
                                android:textColor="#fff"
                                android:textStyle="bold"
                                android:paddingVertical="5dp"
                                android:textAlignment="center"
                                android:background="#E50000"
                                android:checked="false" />

                            <RadioButton
                                android:id="@+id/radioSuspected"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="20sp"
                                android:text="@string/suspected"
                                android:textColor="#fff"
                                android:textStyle="bold"
                                android:paddingVertical="5dp"
                                android:layout_marginTop="3dp"
                                android:textAlignment="center"
                                android:background="#FFD700"
                                android:checked="false" />

                            <RadioButton
                                android:id="@+id/radioOver"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="20sp"
                                android:text="@string/over"
                                android:textColor="#fff"
                                android:textStyle="bold"
                                android:paddingVertical="5dp"
                                android:layout_marginTop="3dp"
                                android:textAlignment="center"
                                android:background="#00CED1"
                                android:checked="false" />

                            <RadioButton
                                android:id="@+id/radioHealthy"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="20sp"
                                android:text="@string/healthy"
                                android:textColor="#fff"
                                android:textStyle="bold"
                                android:paddingVertical="5dp"
                                android:layout_marginTop="3dp"
                                android:textAlignment="center"
                                android:background="#2F972F"
                                android:checked="false" />

                        </RadioGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="8dp"
                        android:layout_gravity="bottom"
                        android:orientation="vertical">

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/info"
                            android:layout_weight="1"
                            android:onClick="jumpToSymptoms"
                            android:paddingHorizontal="24dp"
                            android:background="#864cd5"
                            />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/info"
                            android:layout_weight="1"
                            android:layout_marginTop="3dp"
                            android:paddingHorizontal="24dp"
                            android:background="#E50000"
                            android:onClick="jumpToRiskGroup"
                            />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="jumpToSymptoms"
                            android:layout_weight="1"
                            android:layout_marginTop="3dp"
                            android:paddingHorizontal="24dp"
                            android:src="@drawable/info"
                            android:background="#FFD700"
                            />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/info_blue"
                            android:layout_weight="1"
                            android:paddingHorizontal="24dp"
                            android:layout_marginTop="3dp"
                            android:background="#00CED1"
                            />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="24dp"
                            android:layout_weight="1"
                            android:layout_marginTop="3dp"
                            android:onClick="jumpToPreservation"
                            android:src="@drawable/info"
                            android:background="#2F972F"
                            />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/signUpBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="50dp"
                    android:layout_weight="1"
                    android:background="#E50000"
                    android:onClick="saveDatabase"
                    android:text="@string/next"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>


